--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "룰렛 점심메뉴 선택기",
+  "name": "룰렛 회식메뉴 선택기",
   "short_name": "룰렛메뉴",
   "start_url": "index.html",
   "display": "standalone",
